[tool.poetry]
name = "banki-admin"
version = "0.1.0"
description = ""
authors = ["dbpython <33459750+papismurf@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "banki_admin"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
